--- a/manufacturing/templates/manufacturing/production_line_print_template.html
+++ b/manufacturing/templates/manufacturing/production_line_print_template.html
@@ -179,7 +179,7 @@
                     {% if order.expected_delivery_date %}
                         {{ order.expected_delivery_date|date:"Y-m-d" }}
                         {% now "Y-m-d" as today %}
-                        {% if order.expected_delivery_date|date:"Y-m-d" < today and order.status != 'delivered' %}
+                        {% if order.expected_delivery_date|date:"Y-m-d" < today and order.status not in 'completed,ready_install,delivered' %}
                             <br>(متأخر)
                         {% endif %}
                     {% else %}
